--- a/lecture/index.html
+++ b/lecture/index.html
@@ -6,25 +6,39 @@
     <title>Document</title>
     <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 </head>
 <body>
     <div id="root"></div>
-    <script>
+    <script type="text/babel">
         const e = React.createElement;
         class LikeButton extends React.Component{
-            constructor(){
+            constructor(props){
                 super(props)
+                this.state = {
+                    liked:false,
+                }
             }
             render(){
-                return e(
-                    'button',null,'Like'
-                )
+                return <button onClick={()=>{this.setState({liked:true})}}>
+                    {this.state.liked === true ? 'Liked':'Like'}
+                </button> 
+                //JSX (JS + XML) 문법엄격
+
+                    // e(
+                    // 'button',{onClick:()=>{this.setState({liked:true})},
+                    // type:'submit'},
+                    // this.state.liked===true?'Liked':'Like',
+                    // )
+                //<button onClick='()=>{}' type='submit'></button>
+
+            
             }
         }
     </script>
-    <script>
+    <script type="text/babel">
         //실제 화면에 반영
-        ReactDOM.render(e(LikeButton),document.querySelector('#root'))
+        ReactDOM.render(<LikeButton />,document.querySelector('#root'))
     </script>
 </body>
 </html>
