로또 추첨기 클래스

--- a/lecture/로또추첨기/index.html
+++ b/lecture/로또추첨기/index.html
@@ -5,21 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        #screen{
-            width: 300px;
-            height: 200px;
+        .ball {
+            display: inline-block;
+            border: 1px solid black;
+            border-radius: 20px;
+            width: 40px;
+            height: 40px;
+            line-height: 40px;
+            font-size: 20px;
             text-align: center;
-            user-select: none;
-        }
-        #screen.waiting{
-            background-color: aqua;
-        }
-        #screen.ready{
-            background-color: red;
-            color: white;
-        }
-        #screen.now{
-            background-color: greenyellow;
+            margin-right: 20px;
         }
     </style>
 </head>
